--- a/resources/config.yml
+++ b/resources/config.yml
@@ -4,10 +4,10 @@
 #kickmessage is displayed when kicked
 #warnings is the number offenses before action is taken
 delay: 2
-message1: "Please be polite, do not chat too fast"
-message2: "For help and chat join DISCORD at jdcraft.net/discord"
+message1: "Vă rugăm să fiți politicos, și să nu mai spamati"
+message2: "Pentru ajutor contacteaza-ma pe discord &6Mr_Ender[Zeus]#4455"
 action: "kick"
-kickmessage: "Server Closed"
+kickmessage: "Ai primit kick"
 warnings: 5
 setkickmessage: "Spammers will be kicked"
 setbanmessage: "Spammers will be banned"
